--- a/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.html
+++ b/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.html
@@ -38,7 +38,10 @@
       (click)="toggleSidebar()"
       class="absolute top-[73px] right-[15px] h-[35px] w-[35px] flex items-center justify-center cursor-pointer rounded-[8px] bg-gray-200 hover:bg-gray-300 focus:outline-2 focus:outline-offset-2 focus:outline-gray-300 active:bg-gray-500 transition duration-400 ease-in-out"
     >
-      <span class="material-symbols-rounded text-[1.75rem]"
+      <span
+        (click)="toggleLogo()"
+        [class.rotate-180]="isLogoOpen"
+        class="material-symbols-rounded text-[1.75rem]"
         >arrow_menu_close</span
       >
     </button>
