--- a/src/app/views/features/view-cashier/view-cashier.component.html
+++ b/src/app/views/features/view-cashier/view-cashier.component.html
@@ -51,12 +51,9 @@
           </div>
           <button
             class="flex items-center gap-2 bg-white text-gray-600 text-sm font-medium px-4 py-2 rounded-lg shadow border border-gray-200 hover:bg-gray-300 transition duration-400 ease-in-out"
+            routerLink="/cashier/pedidos/consultar-pedidos"
           >
-            <span
-              routerLink="/cashier/pedidos/consultar-pedidos"
-              class="material-symbols-rounded text-base"
-              >visibility</span
-            >
+            <span class="material-symbols-rounded text-base">visibility</span>
             Ver
           </button>
         </div>
@@ -75,12 +72,9 @@
           </div>
           <button
             class="flex items-center gap-2 bg-white text-gray-600 text-sm font-medium px-4 py-2 rounded-lg shadow border border-gray-200 hover:bg-gray-300 transition duration-400 ease-in-out"
+            routerLink="/cashier/pedidos/registrar-pedidos"
           >
-            <span
-              routerLink="/cashier/pedidos/registrar-pedidos"
-              class="material-symbols-rounded text-base"
-              >visibility</span
-            >
+            <span class="material-symbols-rounded text-base">visibility</span>
             Ver
           </button>
         </div>
@@ -109,12 +103,9 @@
         </div>
         <button
           class="flex items-center gap-2 bg-white text-gray-700 text-sm font-medium px-4 py-2 rounded-lg shadow border border-gray-200 hover:bg-gray-300 transition duration-400 ease-in-out"
+          routerLink="/cashier/pagos/registrar-cobro"
         >
-          <span
-            routerLink="/cashier/pagos/registrar-cobro"
-            class="material-symbols-rounded text-base"
-            >visibility</span
-          >
+          <span class="material-symbols-rounded text-base">visibility</span>
           Ver
         </button>
       </div>
