--- a/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.html
+++ b/src/app/sidebar/features/sidebar-casher/sidebar-casher.component.html
@@ -15,6 +15,8 @@
   rel="stylesheet"
 />
 
+<!-- Aside -->
+
 <aside
   id="sidebar"
   class="fixed w-[240px] min-h-[100vh] bg-white transition-all duration-300 overflow-hidden ease-in-out"
