--- a/src/app/sidebar/features/sidebar-cooker/sidebar-cooker.component.scss
+++ b/src/app/sidebar/features/sidebar-cooker/sidebar-cooker.component.scss
@@ -1,18 +1,34 @@
 @layer utilities {
-    .collapsed {
-        width: 85px;
-        overflow: hidden;
-    }
+  .collapsed {
+    width: 85px;
+    overflow: hidden;
+  }
 
-    .collapsed #nav-label {
-        display: none;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-    }
+  .collapsed .nav-label {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
 
-    .collapsed #nav-link {
-        justify-content: start;
-        padding-left: 10px;
-        border: 2px solid rgba(209, 201, 201, 0.548);
-    }
+  .collapsed .nav-link {
+    justify-content: start;
+    padding-left: 9px;
+    border: 2px solid rgba(209, 201, 201, 0.548);
+  }
+
+  .collapsed .dropdown-icon {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .collapsed #dropdown-menu {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  #nav-item {
+    position: relative;
+  }
 }
