--- a/src/app/shared/modals/filtros-pedidos/filtros-pedidos.component.html
+++ b/src/app/shared/modals/filtros-pedidos/filtros-pedidos.component.html
@@ -33,7 +33,7 @@
     />
   </div>
 
-  <div class="relative w-full md:w-auto">
+  <div *ngIf="mostrarFiltroEstado" class="relative w-full md:w-auto">
     <span
       class="material-symbols-rounded absolute left-3 top-2.5 text-gray-500"
     >
