--- a/src/app/sidebar/features/sidebar-cooker/sidebar-cooker.component.html
+++ b/src/app/sidebar/features/sidebar-cooker/sidebar-cooker.component.html
@@ -27,7 +27,7 @@
     id="sidebar-header"
     class="relative box-border fixed items-center justify-between px-[15px] py-[20px] pb-12"
   >
-    <a routerLink="/cashier" id="header-logo" class="">
+    <a routerLink="/cooker" id="header-logo" class="">
       <img
         class="h-[46px] w-[46px] block object-contain rounded-[50%]"
         src="https://raw.githubusercontent.com/SexAtTheTerminal/mis-imagenes/refs/heads/main/swsLogo.svg"
@@ -104,7 +104,7 @@
             </li>
             <li id="nav-item" class="">
               <a
-                routerLink="/cooker/pedidos/update-estado"
+                routerLink="/cooker/pedidos/update-pedidos"
                 class="w-[200px] h-[38px] flex gap-[12px] items-center text-indigo-500 rounded-[8px] hover:bg-gray-200 focus:outline-2 focus:outline-offset-2 transition"
                 onclick="this.blur()"
               >
