PedidosLogic1.0 + Consultar y Registrar Implementado

--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -47,7 +47,7 @@
       <p class="text-sm text-gray-500">Pedidos que faltan prepararse</p>
     </div>
 
-    <!-- Contenedor principal en columna -->
+    <!-- Contenedor de fondo wasa -->
     <div class="flex flex-col space-y-6">
       <!-- Filtros -->
       <app-filtros-pedidos
